--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -171,7 +171,8 @@
     <ClCompile Include="ShaderHandler.cpp" />
     <ClCompile Include="TimeHandler.cpp" />
     <ClCompile Include="XAudio2Engine\AudioFileReader.cpp" />
-    <ClCompile Include="XAudio2Engine\Sound.cpp" />
+    <ClCompile Include="XAudio2Engine\OmnidirectionalSound.cpp" />
+    <ClCompile Include="XAudio2Engine\XA2AudioManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="ScreenPassPixel.hlsl">
@@ -355,7 +356,8 @@
     <ClInclude Include="ShaderHandler.hpp" />
     <ClInclude Include="TimeHandler.hpp" />
     <ClInclude Include="XAudio2Engine\AudioFileReader.h" />
-    <ClInclude Include="XAudio2Engine\Sound.h" />
+    <ClInclude Include="XAudio2Engine\OmnidirectionalSound.h" />
+    <ClInclude Include="XAudio2Engine\XA2AudioManager.h" />
     <ClInclude Include="XAudio2Engine\XAudio2Helpers.h" />
   </ItemGroup>
   <ItemGroup>
@@ -390,6 +392,7 @@
     <Media Include="Sounds\drums.wav" />
     <Media Include="Sounds\guitar.wav" />
     <Media Include="Sounds\high.wav" />
+    <Media Include="Sounds\MonoSound.wav" />
     <Media Include="Sounds\Song_bird.wav" />
     <Media Include="Sounds\whitenoise.wav" />
   </ItemGroup>
